# dipstick

./: Cargo.toml  flake.nix
resources/: dipstick.desktop
src/: main.rs
