[package]
name = "dipstick"
version = "0.1.0"
edition = "2021"

[toolchain]
channel = "nightly"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.8"
adw = { version = "0.7.1", package = "libadwaita", features = ["v1_6"] }
gtk = { package = "gtk4", version = "0.9.6", features = ["v4_10"] }
glib = "0.20.9"
md5 = "0.7.0"
serde_json = "1.0.139"
serde = { version = "1.0.218", features = ["derive"] }
